# supersecret

./: .coveragerc  .flake8  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  distribute.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
src/supersecret/: __init__.py  manager.py  parser.py
supersecret/: __init__.py  dto.py  exceptions.py  fields.py  manager.py  parser.py  util.py
tests/: test_aws_connection.py  test_fields.py  test_manager.py  test_other.py
