[metadata]
name = supersecret
version = attr: supersecret.__version__
description = SuperSecret is a Python library for managing secrets in AWS Secrets Manager.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gdoermann/supersecret
author = Greg Doermann
author_email = greg@doermann.me
license = MIT
license_file = LICENSE
source = supersecret
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/gdoermann/supersecret
    Tracker = https://github.com/gdoermann/supersecret/issues

[options]
python_requires = >=3.10
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    botocore~=1.29
    boto3~=1.26
    marshmallow~=3.19.0
    tox~=4.14.2
    wheel
    flake8~=6.0.0

[options.extras_require]
extras =
    flake8
    twine
    pytest
    pip-tools
    bumpver
    coverage

[flake8]
exclude = build,.git,.tox,./tests/.env
extend-ignore = E203
max-line-length = 120
per-file-ignores =
    tests/test_aws_connection.py:W601
